# cuPDLPx

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
docs/: C_API.md
include/: cupdlpx_types.h
internal/: internal_types.h  presolve.h  solver.h  utils.h
python/: README.md
python/cupdlpx/: PDLP.py
python_bindings/: _core_bindings.cpp
src/: cli.c  cupdlpx.c  preconditioner.c  presolve.c  solver.cu  utils.cu
test/: test.sh
